create Galaxy class

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from numpy import pi, log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Galaxy():\n",
+    "    \"\"\"\n",
+    "    Derive a dark matter density profile from a galaxy rotation curve\n",
+    "\n",
+    "    Args:\n",
+    "        mvir (float): galaxy virial mass (Msun)\n",
+    "        cvir (float): dark matter concentration parameter (Msun)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(r, mvir, cvir):\n",
+    "\n",
+    "        #Define constants\n",
+    "        self.h = 0.678 #Gaia 2016\n",
+    "        self.G = 6.67430e-11\n",
+    "        self.Msun = 1.98847e30\n",
+    "        self.kpc = 3.0856775814913673e19\n",
+    "        self.fac = 102\n",
+    "\n",
+    "        self.rhocrit = 3*(100*self.h/(self.kpc))**2/(8*np.pi*self.G) * self.kpc**3 / self.Msun\n",
+    "\n",
+    "        self.r = r\n",
+    "        self.mvir = mvir\n",
+    "        self.cvir = cvir\n",
+    "\n",
+    "    def delc(self):\n",
+    "        return (self.fac/3)*self.cvirc**3/(log(1+self.cvir)-self.cvirc/(1+self.cvirc))\n",
+    "\n",
+    "    def rho_nfw(self):\n",
+    "        #NFW density (virial mass in Msun, concentration parameter)\n",
+    "    \n",
+    "        rv = (self.mvir/((4/3) * np.pi * self.fac * self.rhocrit))**(1/3) \n",
+    "        rs = rv / self.cvir\n",
+    "        rhos = self.rhocrit*self.delc()\n",
+    "    \n",
+    "        return rhos/((self.r/rs)*(1.+(self.r/rs))**2.)\n",
+    "\n",
+    "    def mass_nfw(self):\n",
+    "        #Enclosed mass (virial mass in Msun, concentration parameter) in Msun\n",
+    "    \n",
+    "        rv = (self.mvir/((4/3) * np.pi * self.fac * self.frhocrit))**(1/3)\n",
+    "        rs = rv / self.cvir\n",
+    "        rhos = self.rhocrit*self.delc()\n",
+    "    \n",
+    "        return 4 * np.pi * rhos * rs**3 * (log((self.r + rs) / rs) + rs/(self.r + rs) - 1) "
+   ]
   }
  ],
  "metadata": {
