changed variable r in class

--- a/example.ipynb
+++ b/example.ipynb
@@ -107,30 +107,29 @@
     "\n",
     "        self.rhocrit = 3*(100*self.h/(self.kpc))**2/(8*np.pi*self.G) * self.kpc**3 / self.Msun\n",
     "\n",
-    "        self.r = r\n",
     "        self.mvir = mvir\n",
     "        self.cvir = cvir\n",
     "\n",
     "    def delc(self):\n",
     "        return (self.fac/3)*self.cvirc**3/(log(1+self.cvir)-self.cvirc/(1+self.cvirc))\n",
     "\n",
-    "    def rho_nfw(self):\n",
+    "    def rho_nfw(self, r):\n",
     "        #NFW density (virial mass in Msun, concentration parameter)\n",
     "    \n",
     "        rv = (self.mvir/((4/3) * np.pi * self.fac * self.rhocrit))**(1/3) \n",
     "        rs = rv / self.cvir\n",
     "        rhos = self.rhocrit*self.delc()\n",
     "    \n",
-    "        return rhos/((self.r/rs)*(1.+(self.r/rs))**2.)\n",
+    "        return rhos/((r/rs)*(1.+(r/rs))**2.)\n",
     "\n",
-    "    def mass_nfw(self):\n",
+    "    def mass_nfw(self, r):\n",
     "        #Enclosed mass (virial mass in Msun, concentration parameter) in Msun\n",
     "    \n",
-    "        rv = (self.mvir/((4/3) * np.pi * self.fac * self.frhocrit))**(1/3)\n",
+    "        rv = (self.mvir/((4/3) * np.pi * self.fac * self.rhocrit))**(1/3)\n",
     "        rs = rv / self.cvir\n",
     "        rhos = self.rhocrit*self.delc()\n",
     "    \n",
-    "        return 4 * np.pi * rhos * rs**3 * (log((self.r + rs) / rs) + rs/(self.r + rs) - 1) "
+    "        return 4 * np.pi * rhos * rs**3 * (log((r + rs) / rs) + rs/(r + rs) - 1) "
    ]
   }
  ],
