update init function

--- a/example.ipynb
+++ b/example.ipynb
@@ -96,7 +96,7 @@
     "        cvir (float): dark matter concentration parameter (Msun)\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(r, mvir, cvir):\n",
+    "    def __init__(self, r, mvir, cvir):\n",
     "\n",
     "        #Define constants\n",
     "        self.h = 0.678 #Gaia 2016\n",
