Add likelihood function

--- a/example.ipynb
+++ b/example.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "        cvir (float): dark matter concentration parameter (Msun)\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, r, mvir, cvir):\n",
+    "    def __init__(self, mvir, cvir, data_vel, data_err, data_r):\n",
     "\n",
     "        #Define constants\n",
     "        self.h = 0.678 #Gaia 2016\n",
@@ -107,11 +107,16 @@
     "\n",
     "        self.rhocrit = 3*(100*self.h/(self.kpc))**2/(8*np.pi*self.G) * self.kpc**3 / self.Msun\n",
     "\n",
+    "        # Data arrays\n",
+    "        self.data_vel = data_vel # Velocity\n",
+    "        self.data_err = data_err # Velocity errors\n",
+    "        self.data_r = data_r # Radii\n",
+    "\n",
     "        self.mvir = mvir\n",
     "        self.cvir = cvir\n",
     "\n",
     "    def delc(self):\n",
-    "        return (self.fac/3)*self.cvirc**3/(log(1+self.cvir)-self.cvirc/(1+self.cvirc))\n",
+    "        return (self.fac/3)*self.cvir**3/(log(1+self.cvir)-self.cvir/(1+self.cvir))\n",
     "\n",
     "    def rho_nfw(self, r):\n",
     "        #NFW density (virial mass in Msun, concentration parameter)\n",
@@ -129,8 +134,44 @@
     "        rs = rv / self.cvir\n",
     "        rhos = self.rhocrit*self.delc()\n",
     "    \n",
-    "        return 4 * np.pi * rhos * rs**3 * (log((r + rs) / rs) + rs/(r + rs) - 1) "
+    "        return 4 * np.pi * rhos * rs**3 * (log((r + rs) / rs) + rs/(r + rs) - 1) \n",
+    "    \n",
+    "    def log_like(self, c, m_h):\n",
+    "        '''\n",
+    "        Calculate log-likelihood using the data and NFW parameters (c, M_h)\n",
+    "        '''\n",
+    "\n",
+    "        # Calculate enclosed mass array with NFW profile\n",
+    "        enclosed_mass = mass_nfw(self.data_r, m_h, c)\n",
+    "        # Calculate predicted velocity from v^2 = GM/r\n",
+    "        pred_vel = np.sqrt(self.G * enclosed_mass / self.data_err)\n",
+    "\n",
+    "        # Calculate log-likelihood\n",
+    "        llh = -1/2 * np.sum(((self.data_vel - pred_vel) / self.data_err) ** 2)\n",
+    "\n",
+    "        return llh"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
