--- a/example.ipynb
+++ b/example.ipynb
@@ -136,13 +136,13 @@
     "    \n",
     "        return 4 * np.pi * rhos * rs**3 * (log((r + rs) / rs) + rs/(r + rs) - 1) \n",
     "    \n",
-    "    def log_like(self, c, m_h):\n",
+    "    def log_like(self, c, log_m_h):\n",
     "        '''\n",
-    "        Calculate log-likelihood using the data and NFW parameters (c, M_h)\n",
+    "        Calculate log-likelihood using the data and NFW parameters (c, log10(M_h))\n",
     "        '''\n",
     "\n",
     "        # Calculate enclosed mass array with NFW profile\n",
-    "        enclosed_mass = mass_nfw(self.data_r, m_h, c)\n",
+    "        enclosed_mass = mass_nfw(self.data_r, 10**log_m_h, c)\n",
     "        # Calculate predicted velocity from v^2 = GM/r\n",
     "        pred_vel = np.sqrt(self.G * enclosed_mass / self.data_err)\n",
     "\n",
