changed r to r_data

--- a/example.ipynb
+++ b/example.ipynb
@@ -118,23 +118,23 @@
     "    def delc(self):\n",
     "        return (self.fac/3)*self.cvir**3/(np.log(1+self.cvir)-self.cvir/(1+self.cvir))\n",
     "\n",
-    "    def rho_nfw(self, r):\n",
+    "    def rho_nfw(self):\n",
     "        #NFW density (virial mass in Msun, concentration parameter)\n",
     "    \n",
     "        rv = (self.mvir/((4/3) * np.pi * self.fac * self.rhocrit))**(1/3) \n",
     "        rs = rv / self.cvir\n",
     "        rhos = self.rhocrit*self.delc()\n",
     "    \n",
-    "        return rhos/((r/rs)*(1.+(r/rs))**2.)\n",
+    "        return rhos/((self.data_r/rs)*(1.+(self.data_r/rs))**2.)\n",
     "\n",
-    "    def mass_nfw(self, r):\n",
+    "    def mass_nfw(self):\n",
     "        #Enclosed mass (virial mass in Msun, concentration parameter) in Msun\n",
     "    \n",
     "        rv = (self.mvir/((4/3) * np.pi * self.fac * self.rhocrit))**(1/3)\n",
     "        rs = rv / self.cvir\n",
     "        rhos = self.rhocrit*self.delc()\n",
     "    \n",
-    "        return 4 * np.pi * rhos * rs**3 * (np.log((r + rs) / rs) + rs/(r + rs) - 1) \n",
+    "        return 4 * np.pi * rhos * rs**3 * (np.log((self.data_r + rs) / rs) + rs/(self.data_r + rs) - 1) \n",
     "    \n",
     "    def log_like(self, c, log_m_h):\n",
     "        '''\n",
