--- a/example.ipynb
+++ b/example.ipynb
@@ -83,7 +83,7 @@
     "    \n",
     "        return 4 * np.pi * rhos * rs**3 * (np.log((self.data_r + rs) / rs) + rs/(self.data_r + rs) - 1) \n",
     "    \n",
-    "    def log_like(self, c, log_m_h):\n",
+    "    def log_like(self, log_m_h, c):\n",
     "        '''\n",
     "        Calculate log-likelihood using the data and NFW parameters (c, log10(M_h))\n",
     "        '''\n",
@@ -96,7 +96,23 @@
     "        # Calculate log-likelihood\n",
     "        llh = -1/2 * np.sum(((self.data_vel - pred_vel) / self.data_err) ** 2)\n",
     "\n",
-    "        return llh"
+    "        return llh\n",
+    "\n",
+    "    def ptform(self, x):\n",
+    "        '''\n",
+    "        Prior transform.\n",
+    "        '''\n",
+    "\n",
+    "        # Make sure x is a numpy array\n",
+    "        x = np.array(x)\n",
+    "\n",
+    "        # Transform x[0] (log_m_h) to range 6-13 in log(M/M_sun)\n",
+    "        x[0] = (13 - 6) * x[0] + 6\n",
+    "        # Transform x[1] (c) to range 1-50\n",
+    "        x[1] = (50 - 1) * x[1] + 1\n",
+    "\n",
+    "        # Return transformed x\n",
+    "        return x"
    ]
   },
   {
